--- a/01.MachineLearning/机器学习.md
+++ b/01.MachineLearning/机器学习.md
@@ -138,7 +138,7 @@ $$
 
 ### 1.3 过拟合与欠拟合(Overfitting & Underfitting)
 
-1.3.1 过拟合
+#### 1.3.1 过拟合
 
 模型太复杂，拟合结果过于符合训练集，缺乏泛化能力，对测试集表现较差
 
@@ -150,11 +150,11 @@ $$
 
 (3)减少参数的大小(Reduce size of parameters)  ===>  正则化
 
-1.3.2 欠拟合
+#### 1.3.2 欠拟合
 
 模型太简单，拟合结果连训练集都不太符合，对任何数据表现都很差
 
-1.3.3 正则化(Regularization)
+#### 1.3.3 正则化(Regularization)
 
 1.目的：通过减少参数的大小来解决过拟合现象
 
@@ -187,5 +187,36 @@ $$
 
 
 
-## 三、高级学习算法
+## 三、高级学习算法(Advanced Learning Algorithms)
 
+### 3.1 神经网络(Neural Networks)
+
+#### 3.1.1 基本概念
+
+1.神经网络：通过算法模仿人脑神经元的工作方式的模型
+
+2.组成
+
+![image-20241231151553363](C:\Users\machenike\AppData\Roaming\Typora\typora-user-images\image-20241231151553363.png)
+
+(1)输入层(Input Layer)
+
+(2)隐藏层(Hidden Layers)
+
+(3)输出层(Output Layer)
+
+3.常见类型
+
+(1)前馈神经网络(Feedforward Neural Network)
+
+(2)卷积神经网络(Convolutional Neural Network)
+
+(3)循环神经网络(Recurrent Neural Network)
+
+(4)生成对抗网络(Generative Adversarial Network)
+
+(5)自编码器(Autoencoder)
+
+(6)Transformer
+
+#### 3.1.2 前向传播(Forward Propagation)
