--- a/01.MachineLearning/机器学习.md
+++ b/01.MachineLearning/机器学习.md
@@ -220,3 +220,83 @@ $$
 (6)Transformer
 
 #### 3.1.2 前向传播(Forward Propagation)
+
+1.基本模型
+$$
+\vec{a}^{[i]} = [g(\vec{w}^{[i]}\cdot\vec{a}^{[i-1]}+b^{[i]})]
+$$
+
+
+2.基本代码实现
+
+```python
+# Tensorflow
+x = np.array([[200.0, 17.0]])
+x_tensor = tf.convert_to_tensor(x, dtype=tf.float32)
+
+layer_1 = Dense(units=3, activation='sigmoid')
+layer_2 = Dense(units=1, activation='sigmoid')
+
+a1 = layer_1(x_tensor)
+a2 = layer_2(a1)
+
+# Pytorch
+x = torch.tensor([[200.0, 17.0]])
+
+layer_1 = nn.Sequential(
+	nn.Linear(in_features=2, out_features=3),
+	nn.Sigmoid()
+)
+layer_2 = nn.Sequential(
+	nn.Linear(in_features=3, out_features=1),
+	nn.Sigmoid()
+)
+
+a1 = layer_1(x)
+a2 = layer_2(a1)
+```
+
+3.具体实现  ===>  (Coffee Roasting Model)
+
+```python
+def sigmoid(z):
+    return 1/(1+np.exp(-z))
+
+def dense(a_in, W, b, g):
+    units = W.shape[1]
+    a_out = np.zeros(units)
+    for j in range(units):
+        w = W[:,j]
+        z = np.dot(w, a_in) + b[j]
+        a_out[j] = g(z)
+    
+    return a_out
+
+def main():
+    W1 = np.array([
+    	[1, -3, 5],
+    	[2, 4, -6]
+	])
+	b1 = np.array([-1, 1, 2])
+
+	W2 = np.array([
+        [3],
+        [-2],
+        [1]
+    ])
+	b2 = np.array([3])
+
+	x = np.array([-2, 4])
+    
+    a1 = dense(x, W1, b1, sigmoid)
+    a2 = dense(a1, W2, b2, sigmoid)
+    
+    if a2[0] > 0.5:
+        print("Yes!")
+    else:
+        print("No!")
+
+if __name__ == "__main__":
+    main()
+```
+
