--- a/01.MachineLearning/机器学习.md
+++ b/01.MachineLearning/机器学习.md
@@ -300,3 +300,51 @@ if __name__ == "__main__":
     main()
 ```
 
+```python
+# Dense 的矢量化实现
+X = np.array([[200, 17]])
+W = np.array([
+    [1, -3, 5],
+    [-2, 4, -6],
+])
+B = np.array([-1, 1, 2])
+
+def dense(A_in, W, B):
+    Z = np.matmul(A_in, W) + B	# Z = A_in @ W
+    A_out = sigmoid(Z)
+    return A_out
+```
+
+#### 3.1.2 激活函数(Activation Functions)
+
+1.分类
+
+(1)sigmoid
+$$
+g(z) = \frac{1}{1+e^{-z}}
+$$
+(2)ReLU(Rectified Linear Unit)
+$$
+g(z) = max(0,z)
+$$
+ (3)Linear activation function
+$$
+g(z) = z
+$$
+(4)softmax
+$$
+g(z) = \frac{e^{z_{i}}}{\sum_{j=1}^{N}e^{z_{j}}}
+$$
+2.选择
+
+对于输出层
+
+​	(1)二分类问题：sigmoid
+
+​	(2)回归问题：linear
+
+​	(3)回归问题(y >= 0)：relu
+
+对于隐藏层
+
+​	ReLU
